--- a/deployment/_old/devops/Dockerfile.dev
+++ b/deployment/_old/devops/Dockerfile.dev
@@ -6,7 +6,7 @@ RUN mkdir /code
 
 WORKDIR /code
 
-ADD requirements/develop.txt /code/
+ADD ../requirements/develop.txt /code/
 
 RUN pip install -r develop.txt
 
@@ -51,6 +51,7 @@ RUN chmod -R g+w /var/www
 RUN chmod -R 777 /var/www
 
 RUN chmod -R 770 /root/
+
 
 # modify ImageMagick policy file so that Textclips work correctly.
 RUN cat /etc/ImageMagick-6/policy.xml | sed 's/none/read,write/g'> /etc/ImageMagick-6/policy.xml
