--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "doc": "doc"
   },
   "scripts": {
-    "dev": "webpack --mode development",
-    "build": "webpack"
+    "start": "webpack-dev-server --open --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js"
   },
   "repository": {
     "type": "git",
@@ -25,15 +25,18 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "resolve-url-loader": "^2.3.0",
-    "url-loader": "^1.0.1",
-    "webpack": "^4.1.0",
-    "webpack-cli": "^2.0.10"
+    "url-loader": "^1.0.1"
   },
   "devDependencies": {
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "style-loader": "^0.21.0",
-    "webpack-bundle-tracker": "^0.2.1"
+    "uglifyjs-webpack-plugin": "^1.2.7",
+    "webpack": "^4.16.3",
+    "webpack-bundle-tracker": "^0.3.0",
+    "webpack-cli": "^2.1.5",
+    "webpack-dev-server": "^3.1.5",
+    "webpack-merge": "^4.1.3"
   }
 }
