--- a/deployment/k8s/master/nginx-claim1-persistentvolumeclaim.yaml
+++ b/deployment/k8s/master/nginx-claim1-persistentvolumeclaim.yaml
@@ -3,8 +3,8 @@ kind: PersistentVolumeClaim
 metadata:
   creationTimestamp: null
   labels:
-    io.kompose.service: dbpostgres-claim0
-  name: dbpostgres-claim0
+    io.kompose.service: nginx-claim1
+  name: nginx-claim1
 spec:
   accessModes:
   - ReadWriteOnce
