--- a/deployment/k8s/master/redis-deployment.yaml
+++ b/deployment/k8s/master/redis-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   annotations:
-    kompose.cmd: kompose convert -v -f docker-compose.yml
+    kompose.cmd: kompose convert -f docker-compose-master.yml -o deployment/k8s/master/
     kompose.version: 1.15.0 (e3cd4d4)
   creationTimestamp: null
   labels:
