--- a/deployment/k8s/master/web-claim2-persistentvolumeclaim.yaml
+++ b/deployment/k8s/master/web-claim2-persistentvolumeclaim.yaml
@@ -3,8 +3,8 @@ kind: PersistentVolumeClaim
 metadata:
   creationTimestamp: null
   labels:
-    io.kompose.service: neo4j-claim0
-  name: neo4j-claim0
+    io.kompose.service: web-claim2
+  name: web-claim2
 spec:
   accessModes:
   - ReadWriteOnce
