--- a/deployment/k8s/master/webworker-claim3-persistentvolumeclaim.yaml
+++ b/deployment/k8s/master/webworker-claim3-persistentvolumeclaim.yaml
@@ -3,8 +3,8 @@ kind: PersistentVolumeClaim
 metadata:
   creationTimestamp: null
   labels:
-    io.kompose.service: elasticsearch-claim0
-  name: elasticsearch-claim0
+    io.kompose.service: webworker-claim3
+  name: webworker-claim3
 spec:
   accessModes:
   - ReadWriteOnce
