+ Updated master deployment + Added Google Cloud Builder + Some refactoring

--- a/deployment/k8s/master/celery-beat-deployment.yaml
+++ b/deployment/k8s/master/celery-beat-deployment.yaml
@@ -97,7 +97,7 @@ spec:
             configMapKeyRef:
               key: SECRET_KEY
               name: celery-beat-web-master-variables-env
-        image: skyfolk/celery-beat
+        image: eu.gcr.io/skyfolk-211121/celery-beat:latest
         name: celery-beat
         resources: {}
         volumeMounts:
