--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,14 +1,39 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'eu.gcr.io/skyfolk-211121/web:1', '.']
-images: ['gcr.io/${PROJECT_ID}/my-image']
-
-steps:
+  args: [
+    'build',
+    '--cache-from', 'gcr.io/$PROJECT_ID/web:latest',
+    '-t', 'gcr.io/$PROJECT_ID/web:latest',
+    '--file=Dockerfile.master',
+    '--tag=gcr.io/$PROJECT_ID/web',
+    '.' ]
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'eu.gcr.io/skyfolk-211121/web:1', '.']
-images: ['gcr.io/${PROJECT_ID}/my-image']
-
-steps:
+  args: [
+    'build',
+    '--cache-from', 'gcr.io/$PROJECT_ID/webworker:latest',
+    '-t', 'gcr.io/$PROJECT_ID/webworker:latest',
+    '--file=Dockerfile.master',
+    '--tag=gcr.io/$PROJECT_ID/webworker',
+    '.' ]
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'eu.gcr.io/skyfolk-211121/web:1', '.']
-images: ['gcr.io/${PROJECT_ID}/my-image']
+  args: [
+    'build',
+    '--cache-from', 'gcr.io/$PROJECT_ID/celery-worker:latest',
+    '-t', 'gcr.io/$PROJECT_ID/celery-worker:latest',
+    '--file=Dockerfile.master',
+    '--tag=gcr.io/$PROJECT_ID/celery-worker',
+    '.' ]
+- name: 'gcr.io/cloud-builders/docker'
+  args: [
+    'build',
+    '--cache-from', 'gcr.io/$PROJECT_ID/celery-beat:latest',
+    '-t', 'gcr.io/$PROJECT_ID/celery-beat:latest',
+    '--file=Dockerfile.master',
+    '--tag=gcr.io/$PROJECT_ID/celery-beat',
+    '.' ]
+
+images:
+- 'gcr.io/$PROJECT_ID/web:latest'
+- 'gcr.io/$PROJECT_ID/webworker:latest'
+- 'gcr.io/$PROJECT_ID/celery-worker:latest'
+- 'gcr.io/$PROJECT_ID/celery-beat:latest'
