+ Agregado custom nginx container = Movidos archivos de despliegue a deployment/master = Recreados metafiles de k8s

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,10 +5,20 @@ steps:
     'build',
     '--cache-from', 'gcr.io/$PROJECT_ID/web:latest',  # Try to use cached images
     '-t', 'gcr.io/$PROJECT_ID/web:latest',
-    '--file=Dockerfile.master',
+    '--file=deployment/docker/web.Dockerfile',
     '--tag=gcr.io/$PROJECT_ID/web',
+    '.' ]
+  id: web
+- name: 'gcr.io/cloud-builders/docker'
+  args: [
+    'build',
+    '--cache-from', 'gcr.io/$PROJECT_ID/skyfolk-nginx:latest',  # Try to use cached images
+    '-t', 'gcr.io/$PROJECT_ID/skyfolk-nginx:latest',
+    '--file=deployment/docker/skyfolk-nginx.Dockerfile',
+    '--tag=gcr.io/$PROJECT_ID/skyfolk-nginx',
     '.' ]
   id: web
 
 images:
 - 'gcr.io/$PROJECT_ID/web:latest'
+- 'gcr.io/$PROJECT_ID/skyfolk-nginx:latest'
