--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,18 +3,18 @@ steps:
 - name: 'gcr.io/cloud-builders/docker'
   args: [
     'build',
-    '-f','./deployment/docker/Dockerfile.web',
+    '-f','./deployment/docker/web.Dockerfile',
     '--cache-from', 'gcr.io/$PROJECT_ID/web:latest',
     '-t', 'gcr.io/$PROJECT_ID/web:latest',
-    './' ]
+    '.' ]
   id: web
 - name: 'gcr.io/cloud-builders/docker'
   args: [
     'build',
-    '-f','./deployment/docker/Dockerfile.skyfolk-nginx',
+    '-f','./deployment/docker/skyfolk-nginx.Dockerfile',
     '--cache-from', 'gcr.io/$PROJECT_ID/skyfolk-nginx:latest',
     '-t', 'gcr.io/$PROJECT_ID/skyfolk-nginx:latest',
-    './' ]
+    '.' ]
   id: nginx
 images:
 - 'gcr.io/$PROJECT_ID/web:latest'
