--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -18,8 +18,10 @@ steps:
   id: nginx
   waitFor: ['-'] # runs immediately
 - name: 'gcr.io/cloud-builders/kubectl'
-  env: ['CLOUDSDK_COMPUTE_ZONE=europe-west3-a', 'CLOUDSDK_CONTAINER_CLUSTER=cluster-1']
   args: ['apply', '-f', '/workspace/deployment/master/k8s']
+  env:
+  - 'CLOUDSDK_COMPUTE_ZONE=europe-west3-a'
+  - 'CLOUDSDK_CONTAINER_CLUSTER=cluster-1'
 images:
 - 'gcr.io/$PROJECT_ID/web:latest'
 - 'gcr.io/$PROJECT_ID/skyfolk-nginx:latest'
