--- a/deployment/master/cloudbuild.yaml
+++ b/deployment/master/cloudbuild.yaml
@@ -8,6 +8,8 @@ steps:
     '-f','./deployment/master/docker/web.Dockerfile',
     '--cache-from', 'eu.gcr.io/$PROJECT_ID/web:latest',
     '-t', 'gcr.io/$PROJECT_ID/web:latest',
+    # TODO: version number handling
+    #'-t', 'gcr.io/$PROJECT_ID/web:$TAG_NAME',
     '.' ]
   id: build-web-image
   waitFor: ['-'] # runs immediately
@@ -27,6 +29,8 @@ steps:
     '-f','./deployment/master/docker/skyfolk-nginx.Dockerfile',
     '--cache-from', 'eu.gcr.io/$PROJECT_ID/skyfolk-nginx:latest',
     '-t', 'gcr.io/$PROJECT_ID/skyfolk-nginx:latest',
+    # TODO: version number handling
+    #'-t', 'gcr.io/$PROJECT_ID/skyfolk-nginx:$TAG_NAME',
     '.' ]
   id: build-nginx-image
   waitFor: ['-']
@@ -52,3 +56,9 @@ steps:
 - name: 'gcr.io/cloud-builders/kubectl'
   args: ['delete','pods','--all']
   waitFor: ['k8s-apply']
+
+# Push latest
+# TODO: version number handling
+#images:
+#- 'gcr.io/$PROJECT_ID/web:latest'
+#- 'gcr.io/$PROJECT_ID/skyfolk-nginx:latest'
