--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,9 +25,41 @@ services:
     depends_on:
       - dbpostgres
 
+  zookeeper:
+      image: debezium/zookeeper:latest
+      ports:
+       - "2181:2181"
+       - "2888:2888"
+       - "3888:3888"
+      networks:
+         - skyfolknetwork
+  kafka:
+    image: debezium/kafka:latest
+    ports:
+      - "9092:9092"
+    environment:
+      - ZOOKEEPER_CONNECT=zookeeper:2181
+    networks:
+      - skyfolknetwork
+
+  connect:
+    image: debezium/connect-jdbc-es:latest
+    build:
+      context: debezium-jdbc-es
+    ports:
+      - "8083:8083"
+      - "5005:5005"
+    networks:
+      - skyfolknetwork
+    environment:
+      - BOOTSTRAP_SERVERS=kafka:9092
+      - GROUP_ID=1
+      - CONFIG_STORAGE_TOPIC=my_connect_configs
+      - OFFSET_STORAGE_TOPIC=my_connect_offsets
+
   # postgresql
   dbpostgres:
-    image: postgres:latest
+    image: debezium/postgres:9.6
     volumes:
       - ./run/postgresql:/var/lib/postgresql
     restart: always
@@ -49,6 +81,10 @@ services:
     volumes:
       - ./run/esdata/:/usr/share/elasticsearch/data/
     restart: always
+    environment:
+      - http.host=0.0.0.0
+      - transport.host=127.0.0.1
+      - xpack.security.enabled=false
     networks:
       - skyfolknetwork
 
