--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-
 version: '3'
 services:    
   # redis
@@ -19,6 +18,7 @@ services:
       - NEO4J_AUTH=neo4j/1518
     volumes:
       - ./run/db/dbms:/data/dbms
+      - ./neo4j:/var/lib/neo4j/plugins
     restart: always
     networks:
       - skyfolknetwork
