Create widget in private dashboard fixed

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -131,6 +131,8 @@ services:
       - dbpostgres
   # django app
   web:
+    stdin_open: true
+    tty: true
     env_file:
       - web-variables.env
     build:
